--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
    
 
     <footer class="border-top footer text-muted text-center">
-        &copy; 2024 - Invoice - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2024 - Invoice - Samiul
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
