--- a/Views/Invoice/Index.cshtml
+++ b/Views/Invoice/Index.cshtml
@@ -9,11 +9,11 @@
 </header>
 
 <div class="col-md-12 ">
-   @*  <div class="card shadow mb-4">
+     <div class="card shadow mb-4">
         <div class="card-header bg-info text-white text-center">
             <h4 class="mb-0">Invoice</h4>
         </div>
-    </div> *@
+    </div> 
     <form>
         <div class="row">
             <div class="col-md-7  ps-4">
